# wi2wic

./: .gitignore  Makefile  Makefile.conf.in  README.md  alire.toml  configure  configure.ac  tsconfig.json  wi2wic.gpr  wi2wic.gpr.in  wi2wic.properties  wi2wic_config.gpr
docker/: Dockerfile
src/: wi2wic-applications.adb  wi2wic-applications.ads  wi2wic-rest.adb  wi2wic-rest.ads  wi2wic-server.adb  wi2wic.ads
web/: index.html
web/css/: wi2wic.css
web/js/: wi2wic.d.ts  wi2wic.js  wi2wic.ts
